--- a/src/app/modules/add-course/components/authors-input/authors-input.component.html
+++ b/src/app/modules/add-course/components/authors-input/authors-input.component.html
@@ -1,7 +1,7 @@
 <div class="form-item form-item-authors">
   <label for="courseAuthors" class="form-label">
-    Authors:
-    <span class="form-required">*required</span>
+    {{ 'COURSE.AUTHORS' | translate }}:
+    <span class="form-required">{{ 'VALIDATION.REQUIRED' | translate }}</span>
   </label>
 
   <div class="form-input" [ngClass]="{'error': formControl.dirty && formControl.errors}">
