--- a/src/app/modules/add-course/components/date-input/date-input.component.html
+++ b/src/app/modules/add-course/components/date-input/date-input.component.html
@@ -1,7 +1,7 @@
 <div class="form-item small">
   <label for="courseDate" class="form-label">
-    Date:
-    <span class="form-required">*required</span>
+    {{ 'COURSE.DATE' | translate }}:
+    <span class="form-required">{{ 'VALIDATION.REQUIRED' | translate }}</span>
   </label>
   <div class="form-item-with-icon">
     <input
