--- a/src/app/modules/courses-list/pages/courses-page.component.html
+++ b/src/app/modules/courses-list/pages/courses-page.component.html
@@ -5,7 +5,7 @@
   <div class="add-course">
     <a class="button button-icon button-large button-add-course" routerLink="/courses/new">
       <svg-icon-sprite [src]="'plus'" [class]="'icon icon-plus'"></svg-icon-sprite>
-      Add course
+      {{ 'COURSE.ADD' | translate }}
     </a>
   </div>
   <agm-courses-list></agm-courses-list>
