--- a/src/app/shared/components/breadcrumbs/breadcrumbs.component.html
+++ b/src/app/shared/components/breadcrumbs/breadcrumbs.component.html
@@ -4,7 +4,8 @@
       <li *ngFor="let breadcrumb of breadcrumbs; let isLast = last;" class="item">
         <a *ngIf="!isLast" routerLink="/{{breadcrumb.url}}" class="link">{{breadcrumb.title}}</a>
         <span *ngIf="!isLast" class="sep"> / </span>
-        <span *ngIf="isLast" class="last">{{breadcrumb.title}}</span>
+        <span *ngIf="isLast && breadcrumb.dynamicCourseTitle" class="last">{{courseTitle}}</span>
+        <span *ngIf="isLast && !breadcrumb.dynamicCourseTitle" class="last">{{breadcrumb.title}}</span>
       </li>
     </ul>
   </nav>
