--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div class="page-footer">
   <footer class="page-container">
-    Copyright © Videocourses. All rights reserved
+    {{ 'COPYRIGHT' | translate }}
   </footer>
 </div>
