--- a/src/app/shared/components/header/header.component.styl
+++ b/src/app/shared/components/header/header.component.styl
@@ -27,6 +27,8 @@
 .menu
   display flex
   align-items center
+  margin-left auto
+  margin-right 20px
 
 .menu-item:first-child
   margin-right 25px
@@ -54,4 +56,7 @@
   height 15px
   bottom 0
 
-
+.lang-selector
+  height 25px
+  align-self center
+  width 60px
