--- a/src/app/modules/add-course/components/duration-input/duration-input.component.html
+++ b/src/app/modules/add-course/components/duration-input/duration-input.component.html
@@ -1,8 +1,10 @@
 <div class="form-item small">
   <label for="courseDuration" class="form-label">
-    Duration:
-    <span class="form-error" *ngIf="formControl.dirty && formControl.errors?.number">Enter valid number</span>
-    <span class="form-required">*required</span>
+    {{ 'COURSE.DURATION' | translate }}:
+    <span class="form-error" *ngIf="formControl.dirty && formControl.errors?.number">
+      {{ 'VALIDATION.NUMBER' | translate }}
+    </span>
+    <span class="form-required">{{ 'VALIDATION.REQUIRED' | translate }}</span>
   </label>
   <input id="courseDuration"
          type="text"
@@ -10,5 +12,5 @@
          (keyup)="changeDuration($event)"
          [value]="formControl?.value"
          [ngClass]="{'error': formControl.dirty && formControl.errors}" />
-  <span class="duration-value" *ngIf="!formControl.errors">{{formControl.value | duration}}</span>
+  <span class="duration-value" *ngIf="!formControl.errors">{{formControl.value | duration:locale}}</span>
 </div>
