--- a/src/app/modules/add-course/components/duration-input/duration-input.component.styl
+++ b/src/app/modules/add-course/components/duration-input/duration-input.component.styl
@@ -4,7 +4,8 @@
 .duration-value
   font 14px/24px font-sans-pro
   color map-get(colors, 'slate-grey')
-  position absolute
-  left 180px
-  top 32px
   width 100%
+  +up-mobile()
+    position absolute
+    left 220px
+    top 32px
