--- a/src/app/modules/courses-list/components/courses-list-item/courses-list-item.component.html
+++ b/src/app/modules/courses-list/components/courses-list-item/courses-list-item.component.html
@@ -8,14 +8,14 @@
         <svg-icon-sprite *ngIf="coursesListItem.isTopRated" [src]="'star'" [class]="'icon icon-star'"></svg-icon-sprite>
       </h2>
       <div class="time-wrapper">
-      <span class="duration">
-        <svg-icon-sprite [src]="'clock'" [class]="'icon icon-clock'"></svg-icon-sprite>
-        {{coursesListItem.length | duration}}
-      </span>
-        <span class="date">
-        <svg-icon-sprite [src]="'calendar'" [class]="'icon icon-calendar'"></svg-icon-sprite>
-          {{coursesListItem.date | date:'d MMM, y'}}
-      </span>
+        <span class="duration">
+          <svg-icon-sprite [src]="'clock'" [class]="'icon icon-clock'"></svg-icon-sprite>
+          {{coursesListItem.length | duration:locale}}
+        </span>
+          <span class="date">
+          <svg-icon-sprite [src]="'calendar'" [class]="'icon icon-calendar'"></svg-icon-sprite>
+            {{coursesListItem.date | date:'d MMM, y':undefined:locale}}
+        </span>
       </div>
     </header>
     <div class="description">
@@ -26,11 +26,11 @@
   <div class="actions">
     <button class="button button-icon button-edit" routerLink="/courses/{{coursesListItem.id}}">
       <svg-icon-sprite [src]="'pen'" [class]="'icon icon-pen'"></svg-icon-sprite>
-      Edit
+      {{ 'COURSE.EDIT' | translate }}
     </button>
     <button class="button button-icon button-delete" (click)="deleteButtonHandler()">
       <svg-icon-sprite [src]="'trash'" [class]="'icon icon-trash'"></svg-icon-sprite>
-      Delete
+      {{ 'COURSE.DELETE' | translate }}
     </button>
   </div>
 </article>
