--- a/src/app/modules/courses-list/components/delete-course-popup/delete-course-popup.component.html
+++ b/src/app/modules/courses-list/components/delete-course-popup/delete-course-popup.component.html
@@ -1,5 +1,5 @@
 <h2 mat-dialog-title>
-  Delete course?
+  {{ 'COURSE_DELETE.TITLE' | translate }}
 
   <button class="agm-dialog-close" (click)="close()">
     <svg-icon-sprite [src]="'close'" [class]="'icon icon-close'"></svg-icon-sprite>
@@ -7,11 +7,11 @@
 </h2>
 
 <mat-dialog-content>
-  Are you sure you want to delete<br/>
+  {{ 'COURSE_DELETE.CONTENT' | translate }}<br/>
   {{name}}?
 </mat-dialog-content>
 
 <mat-dialog-actions>
-  <button class="button-style-cancel" (click)="close()">Cancel</button>
-  <button class="button-style-primary" (click)="delete()">Yes, delete</button>
+  <button class="button-style-cancel" (click)="close()">{{ 'COURSE_DELETE.CANCEL' | translate }}</button>
+  <button class="button-style-primary" (click)="delete()">{{ 'COURSE_DELETE.SUBMIT' | translate }}</button>
 </mat-dialog-actions>
